# lingualearn

./: .gitignore  ChatGPT3.5-generated_code.ipynb  LICENSE  README.md  call_gpt.py  check_grammar.py  generate_text_images.py  glibgab.ipynb  glibgab.py  io_files.py  learn_to_transcribe_sounds.py  lingualearn.py  linguamorph.ipynb  linguamorph.py  prepare_dictionary.py  process_phonemes.py  pyproject.toml  simplify_text.py  speak.py  spectrogram.py  transcribe_summarize.ipynb  workspace_gpt.ipynb
data/dictionaries/: consonants_LanguageTool.pkl  consonants_english_words_py.pkl  consonants_pyenchant.pkl  filter_words.txt  pronunciations_LanguageTool.pkl  pronunciations_english_words_py.pkl  pronunciations_pyenchant.pkl  pronunciations_stress_english_words_py.pkl  pronunciations_stress_pyenchant.pkl  stresses_LanguageTool.pkl  stresses_english_words_py.pkl  stresses_pyenchant.pkl  words_LanguageTool.pkl  words_english_words_py.pkl  words_pyenchant.pkl
diagrams/: cmu-phoneme-chart.docx  cmu-phonemes.txt
documents/: cmu-phoneme-chart.docx  cmu-phonemes.txt
lingualearn/: features.js  index.html  move_marker_with_formants.html  script.js  stretch_image_with_formants.html  style.css
lingualearn copy/: script.js  style.css
lingualearn/scripts/: formantanalyzer.js  stretch_image_with_formants.js
src/lingualearn_words/: check_grammar.py  glibgab.py  io_files.py  lingualearn.py  process_phonemes.py  simplify_text.py  speak.py
src/lingualearn_words/data/dictionaries/: pronunciations_pyenchant.pkl  stresses_english_words_py.pkl
workspace/: transcribe_summarize.ipynb
