[tool.poetry]
name = "lingualearn_words"
version = "0.1.0"
description = "Command-line tools for building vocabulary and improving verbal fluency."
authors = ["Arno Klein <binarybottle@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
g2p-en = "^2.1.0"
gtts = "^2.5.1"
sounddevice = "^0.4.6"
soundfile = "^0.12.1"
pyaudio = "^0.2.14"
matplotlib = "^3.8.3"
openai = "^1.14.1"
speechrecognition = "^3.10.1"
textstat = "^0.7.3"

line-length = 88
indent-width = 4
target-version = "py312"


[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
